--- a/marshak/update_chips/environment.yml
+++ b/marshak/update_chips/environment.yml
@@ -12,6 +12,7 @@ dependencies:
  - shapely
  - dateparser
  - requests
+ - gdal<3.4
  - numpy
  - matplotlib
  - fiona
@@ -21,5 +22,3 @@ dependencies:
  - tqdm
  - pip
  - contextily
- - scikit-image
- - scikit-learn
